<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#090909"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:foregroundTint="#DAC0C0"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="Unit Converter"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn1"
            android:layout_width="166dp"
            android:layout_height="136dp"
            android:layout_marginTop="168dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:drawableTop="@drawable/currency_icon"
            android:paddingTop="30dp"
            android:text="@string/currency"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="166dp"
            android:layout_height="136dp"
            android:layout_marginTop="168dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:drawableTop="@drawable/ic_weight"
            android:paddingTop="30dp"
            android:text="Wight"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="166dp"
            android:layout_height="136dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:drawableTop="@drawable/time_icon"
            android:paddingTop="28dp"
            android:paddingBottom="20dp"
            android:text="@string/time"

            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button

            android:id="@+id/btn4"
            android:layout_width="166dp"
            android:layout_height="136dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:drawableTop="@drawable/ic_length"
            android:paddingTop="28dp"
            android:paddingBottom="20dp"
            android:text="@string/length"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="166dp"
            android:layout_height="136dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:drawableTop="@drawable/ic_celsius"
            android:foregroundGravity="center"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="28dp"
            android:text="@string/temperature"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="166dp"
            android:layout_height="136dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:drawableTop="@drawable/ic_calendar"
            android:paddingTop="28dp"
            android:text="@string/calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>